# Yetta-Pastries

./: .env  index.html  package-lock.json  package.json
Backend/: .env  Cargo.toml
src/: App.css  MenuCard.jsx  main.jsx  main.rs
src/Auth/: AuthPage.jsx
src/Cake/: CakesPage.jsx
src/Cookies/: CookiesPage.jsx
src/Drinks/: DrinksPage.jsx
src/Home/: App.css  App.jsx  main.jsx
src/IceCream/: IceCreamPage.jsx
src/components/: Footer.jsx  Header.jsx
src/handlers/: auth.rs
src/models/: user.rs
src/services/: api.js
src/utils/: jwt.rs
