[package]
name = "yetta_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7" # For handling CORS with the React frontend

mongodb = { version = "2.8", features = ["tls"] } # MongoDB driver
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
serde_json = "1.0"

dotenv = "0.15"      # For loading .env files
env_logger = "0.11"  # For logging
log = "0.4"

futures = "0.3" # For async database operations

# --- Security ---
argon2 = "0.5"             # For password hashing
rand_core = { version = "0.6", features = ["std"] } # Required by argon2
jsonwebtoken = "9"         # For JSON Web Tokens (JWT)
chrono = { version = "0.4", features = ["serde"] } # For JWT expiration times